# lockstep

./: .env.example  .gitignore  .lockstep_activity.jsonl  DEVIN_SETUP.md  DEVIN_USAGE_GUIDE.md  README.md  cache.py  codepulse.py  codepulse_report.json  config.py  pyproject.toml  server.py  webhook.py
.devin/: DEVIN_SETUP.md  DEVIN_USAGE_GUIDE.md  config.json
.github/workflows/: deploy-frontend.yml
librariesintodatabase/: README.md  db.py  dbview.py  extract_functions.py  extract_tags.py  library_seed_list.yaml  requirements.txt  schema.sql  scrape.py  verify_acceptance.py
scripts/: cache_inspector.py  plan_monitor.py  test_harness.py  test_harness_devops_monitor.py
tools/: docs.py  plan.py  recommend.py  resolve.py
webapp/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
webapp/src/: App.tsx  index.css
webapp/src/components/: DashboardLayout.tsx  Header.tsx  LogoMark.tsx  SplashScreen.tsx  TopNav.tsx
webapp/src/components/ui/: Button.tsx  Card.tsx  CodeBlock.tsx  Input.tsx  Select.tsx  TagInput.tsx
webapp/src/content/: devinGuideContent.ts  homeStats.ts
webapp/src/hooks/: useDarkMode.ts
webapp/src/pages/: AddDocumentationForm.tsx  ClaudeCodeGuide.tsx  DevinGuide.tsx  Home.tsx
webapp/src/types/: ingestion.ts
webapp_api/: ingest.py  main.py  schemas.py
