[project]
name = "lockstep"
version = "0.1.0"
description = "MCP server: library recommendations + version-pinned docs over a probabilistic semantic cache on Redis"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "redis>=5.0.0",
    "supabase>=2.0.0",
    "sentence-transformers>=2.7.0",
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "packaging>=23.0",
    "numpy>=1.26.0",
    "sentry-sdk>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
obs = [
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation>=0.1.0",
]

[project.scripts]
lockstep = "server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "redis_client", "embeddings", "cache", "config", "supabase_client"]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
